tests/pass/0043_print_relational_operators.ee
fn main() {
    debugPrint(1 < 2);
    debugPrint(2 <= 2);
    debugPrint(3 > 2);
    debugPrint(3 >= 3);
}
