tests/fail/0027_nothing_relational_operator.ee
fn main() {
    debugPrint(nothing >= 1);
}
